

######### 2014-7-24 ###### zifei ####
alter table shop_weixin_user change baby_nick receiver_name varchar(64) NOT NULL;
alter table shop_weixin_user drop column baby_birth;
alter table shop_weixin_user add column birth_year int(11) DEFAULT 0;
alter table shop_weixin_user add column birth_month int(11) DEFAULT 0;
######### 2014-7-23 ########
alter table shop_trades_mergebuyertrade ENGINE=InnoDB;
alter table shop_jingdong_product add column sync_stock tinyint(1) NOT NULL;
######### 2014-7-4 ##########
alter table shop_weixin_account add column order_updated datetime DEFAULT NULL;
alter table shop_weixin_account add column refund_updated datetime DEFAULT NULL;
######### 2014-7-1 ##########
alter table shop_weixin_account add column pay_sign_key pay_sign_key varchar(128) NOT NULL;
alter table shop_weixin_account add column partner_id varchar(32) NOT NULL;
alter table shop_weixin_account add column partner_key varchar(128) NOT NULL;
######### 2014-6-27 ##########
alter table shop_weixin_account add column pay_sign_key ;
alter table shop_users_user change column type type varchar(8) NOT NULL;
######### 2014-6-22 ##########
alter table shop_fenxiao_purchaseorder change distributor_payment distributor_payment double NOT NULL;
alter table shop_fenxiao_purchaseorder change post_fee post_fee double NOT NULL;
alter table shop_fenxiao_purchaseorder change total_fee total_fee double NOT NULL;
alter table shop_fenxiao_subpurchaseorder change total_fee total_fee double NOT NULL;
alter table shop_fenxiao_subpurchaseorder change distributor_payment distributor_payment double NOT NULL;
alter table shop_fenxiao_subpurchaseorder change buyer_payment buyer_payment double NOT NULL;
alter table shop_fenxiao_subpurchaseorder change refund_fee refund_fee double NOT NULL;
alter table shop_fenxiao_subpurchaseorder change auction_price auction_price double NOT NULL;
alter table shop_fenxiao_subpurchaseorder change price price double NOT NULL;
######### 2014-6-21 ##########